--- a/aula027-ex copy/index.html
+++ b/aula027-ex copy/index.html
@@ -16,15 +16,15 @@
     <form action="" id="form" method="get">
   
       <label for="ipeso">Peso</label>
-      <input type="number" id="ipeso" name="peso" step="0.01">
+      <input type="number" id="peso" name="peso" step="0.01">
 
       <label for="ialtura">Altura</label>
-      <input type="number" id="ialtura" name="altura" step="0.01">
+      <input type="number" id="altura" name="altura" step="0.01">
 
       <button type="submit">Enviar</button>
     </form>
     
-    <div id="iresp"></div>
+    <div id="resultado"></div>
   </section>
 
   <script src="./assests/js/main.js"></script>
